--- a/pages/TWTimeListing.page
+++ b/pages/TWTimeListing.page
@@ -1,4 +1,8 @@
 <apex:page controller="TeamWorkAPI_Test">
     {!jsonResult}
+    <apex:repeat value="{!twTaskEntries}" var="t">
+        {!t}
+        _
+    </apex:repeat>
 
 </apex:page>
