--- a/aura/Progress_bar_test/Progress_bar_test.cmp
+++ b/aura/Progress_bar_test/Progress_bar_test.cmp
@@ -1,8 +1,14 @@
-<aura:component implements="flexipage:availableForAllPageTypes" access="global">
+<aura:component implements="flexipage:availableForAllPageTypes,force:hasRecordId" access="global">
     
+    <aura:attribute name="id" type="Id"/>
+    
+    
+    <!-- DATA VARIABLES -->
     <aura:attribute name="valuemin" type="Integer" default="0"/>
     <aura:attribute name="valuemax" type="Integer" default="100"/>
-    <aura:attribute name="progress" type="Integer" default="50"/>
+    <aura:attribute name="progress" type="String" default="50"/>
+    
+    <!-- STYLE VARIABLES -->
     <aura:attribute name="barcolor" type="string" default=""/>
     <aura:attribute name="barbackground" type="string" default=""/>
     
